# GuitarAudioTuner

./: .gitignore  README.md
.github/: copilot-instructions.md
backend/: CLAUDE.md  README.md  analyze.py  app.py  convert.py  pyproject.toml  stft_walkthrough.py
backend/tests/: test_api.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AudioPanel.jsx  ResultsPanel.css  ResultsPanel.jsx  Waveform.jsx
