[build-system]
requires = ["hatchling>=1.10"]
build-backend = "hatchling.build"

[project]
name = "guitar-analyzer-backend"
version = "0.1.0"
description = "Flask backend for Guitar Performance Analyzer"
readme = "README.md"
requires-python = ">=3.10"
authors = [ { name = "Your Name", email = "you@example.com" } ]
license = { text = "MIT" }
keywords = ["audio", "music", "librosa", "flask"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License"]

[project.dependencies]
Flask = ">=2.0"
flask-cors = ">=3.0"
ffmpeg-python = ">=0.2.0"
librosa = ">=0.9.2"
scipy = ">=1.8"
numpy = ">=1.22"
matplotlib = ">=3.5"
soundfile = ">=0.11"

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "pre-commit"]

[project.scripts]
start = "backend.app:run_app"

[project.urls]
Homepage = "https://example.com/"
Repository = "https://github.com/youruser/GuitarAudioTuner"
