[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Adarsh Danda",email = "adarsh.danda1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "flask-cors (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
