[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "librosa>=0.11.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "plotly>=6.7.0",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
]
